Made it so currentplayer is highlighted